--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,5 +1,5 @@
 .header {
-  background: #fafafa;
+  background: #ffffff;
   display: flex;
   align-items: center;
   justify-content: space-between;
